# TAALA-2KEN

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.pyw
credential_provider/: CMakeLists.txt  PipeServer.cpp  PipeServer.h  SecureDesktopHelper.cpp  SecureDesktopHelper.h  Taala2KenCredential.cpp  Taala2KenCredential.h  Taala2KenProvider.cpp  Taala2KenProvider.h  build.bat  dllmain.cpp  guid.h  provider.def  register.reg  sign_and_register.ps1  unregister.reg
docs/: architecture.md  deployment.md  protocol.md
taala2ken/: __init__.py  __main__.py  autostart.py  cli.py  config.py  constants.py  lock.py  log.py  models.py  monitor.py  pipe_server.py  pkcs11_auth.py  tray_app.py
taala2ken/detection/: __init__.py  helpers.py  pipeline.py
tests/: __init__.py  conftest.py  test_all.py
